# Diversity-aware-Inference-time-Search-via-Critical-tokens

./: README.md  generate_plots.py  pyproject.toml  requirements.txt
results/gemma/: BeamSearch_TriviaQA_gemma-7b-it_mnt100_beams5_lp1.0_seed42verified.json  BeamSearch_TriviaQA_gemma-7b-it_mnt100_beams5_lp1.0_seed42verified_diversity.json  BeamSearch_TriviaQA_gemma-7b-it_mnt100_beams5_lp1.0_seed42verified_judge_accuracy.json  BoN_TriviaQA_gemma-7b-it_mnt100_ns5_temp1.0_topp1.0_topk0_seed42verified.json  BoN_TriviaQA_gemma-7b-it_mnt100_ns5_temp1.0_topp1.0_topk0_seed42verified_diversity.json  BoN_TriviaQA_gemma-7b-it_mnt100_ns5_temp1.0_topp1.0_topk0_seed42verified_judge_accuracy.json  Ours_TriviaQA_gemma-7b-it_mnt100_topk100_ck5_ns1_sc0_sw0_layer28_eb4_seed42.json  Ours_TriviaQA_gemma-7b-it_mnt100_topk100_ck5_ns1_sc0_sw0_layer28_eb4_seed42verified.json  Ours_TriviaQA_gemma-7b-it_mnt100_topk100_ck5_ns1_sc0_sw0_layer28_eb4_seed42verified_diversity.json  Ours_TriviaQA_gemma-7b-it_mnt100_topk100_ck5_ns1_sc0_sw0_layer28_eb4_seed42verified_judge_accuracy.json  Ours_TriviaQA_gemma-7b-it_mnt100_topk100_ck5_ns4_sc0_sw1_layer28_eb4_seed42.json  Ours_TriviaQA_gemma-7b-it_mnt100_topk100_ck5_ns4_sc0_sw1_layer28_eb4_seed42verified.json  Ours_TriviaQA_gemma-7b-it_mnt100_topk100_ck5_ns4_sc0_sw1_layer28_eb4_seed42verified_diversity.json  Ours_TriviaQA_gemma-7b-it_mnt100_topk100_greedy_layer28_eb4_seed42verified.json  (+11 more)
scripts/: _bootstrap.py  hf_login.py  run_accuracy.py  run_beamsearch.py  run_bon.py  run_diversity.py  run_ours.py  run_verify.py
src/: __init__.py  data.py  hf.py  utils.py
(+59 files in other folders)
